reduce z-index to avoid appearing over the menu (bugid:110397)

--- a/mt-static/css/structure.css
+++ b/mt-static/css/structure.css
@@ -4573,6 +4573,10 @@ div.template-group-content.active {
     height: 300px;
 }
 
+#content .morris-hover {
+    z-index: 400;
+}
+
 #container,
 #content,
 .line,
